--- a/src/components/Movies/Movies.module.css
+++ b/src/components/Movies/Movies.module.css
@@ -50,14 +50,14 @@
 }
 
 .actorImage {
-  width: 50px; /* Adjust size */
+  width: 50px;
   height: 50px;
-  border-radius: 50%; /* Circle shape */
+  border-radius: 50%;
   margin-right: 10px;
 }
 
 .review {
-  margin-top: 5px;
+  margin-top: 6px;
 }
 
 .active {
